fixed h1 font size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,8 +193,15 @@ h1 {
     margin-bottom: .4em;
 
     font-family: var(--secondary-font);
+    font-size: 1.5em;
     text-align: center;
     text-transform: lowercase;
+}
+
+@media (min-width: 544px) {
+    h1 {
+        font-size: 2em;
+	}
 }
 
 h1::before {
